[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/sun.png" type="Texture" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Captain.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/alexander-nakarada-now-we-ride.ogg" type="AudioStream" id=5]
[ext_resource path="res://resources/ui_hb_fragment.tres" type="Texture" id=6]
[ext_resource path="res://scripts/ShipGui.gd" type="Script" id=7]
[ext_resource path="res://scripts/Game.gd" type="Script" id=8]
[ext_resource path="res://assets/ui_stuff.png" type="Texture" id=9]
[ext_resource path="res://scripts/SpawnCtrl.gd" type="Script" id=10]
[ext_resource path="res://scenes/PirateShip.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/fonts/yoster.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scripts/EndScreen.gd" type="Script" id=13]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float speed_scale = 0.0;

void fragment() {
	COLOR = texture(TEXTURE, UV + (vec2(1.0, 0.0) * TIME * speed_scale));
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed_scale = 0.0

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 629.121, 418.294 ), Vector2( 624.631, 431.764 ), Vector2( 621.264, 464.315 ), Vector2( 619.929, 573.772 ), Vector2( 581.219, 880.785 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -9.4, -28.1, -46.8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 629.121, 418.294 ), Vector2( 1400, 418.294 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 630, 418 ), Vector2( 630, 416 ), Vector2( 630, 416 ), Vector2( 630, 418 ) ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( -1.2185, 73.3979, 518.476, 15.9136 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 7, 101, 9, 26 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/TextureRect/Slider:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.015, 0.968 ]
}

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 12, 3, 148, 38 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.976471, 0.847059, 0.631373, 1 )

[sub_resource type="DynamicFont" id=11]
size = 22
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 12 )

[sub_resource type="InputEventAction" id=13]
action = "ui_accept"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="Animation" id=15]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Bg" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 585.925, 110.001 )
texture = ExtResource( 2 )

[node name="Sun" type="Sprite" parent="."]
position = Vector2( 1154.33, 106.276 )
texture = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 3 )]
position = Vector2( 630, 418 )
captains_scn = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ship"]
pause_mode = 2
playback_speed = 0.35
anims/die = SubResource( 3 )
anims/end = SubResource( 4 )
anims/glide = SubResource( 5 )

[node name="SpawnCtrl" type="Node2D" parent="."]
script = ExtResource( 10 )
pirate_ship = ExtResource( 11 )
player_ship = NodePath("../Ship")
max_pirates = 3
attack_on_both_sides = true

[node name="Timer" type="Timer" parent="SpawnCtrl"]

[node name="AttackPosLeft" type="Node2D" parent="SpawnCtrl"]

[node name="Position2D" type="Position2D" parent="SpawnCtrl/AttackPosLeft"]
position = Vector2( 160.543, 350.816 )

[node name="Position2D2" type="Position2D" parent="SpawnCtrl/AttackPosLeft"]
position = Vector2( 160.543, 454.277 )

[node name="AttackPosRight" type="Node2D" parent="SpawnCtrl"]

[node name="Position2D" type="Position2D" parent="SpawnCtrl/AttackPosRight"]
position = Vector2( 1124.99, 332.978 )

[node name="Position2D2" type="Position2D" parent="SpawnCtrl/AttackPosRight"]
position = Vector2( 1124.99, 449.52 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -24.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FlyProgress" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 35.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 729, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/FlyProgress"]
margin_left = 381.0
margin_right = 899.0
margin_bottom = 35.0
grow_vertical = 2
custom_constants/margin_top = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/FlyProgress/MarginContainer"]
margin_top = 20.0
margin_right = 518.0
margin_bottom = 35.0
grow_horizontal = 2
size_flags_vertical = 5
texture = SubResource( 6 )

[node name="Slider" type="TextureRect" parent="CanvasLayer/FlyProgress/MarginContainer/TextureRect"]
anchor_left = 0.015
anchor_top = -0.2
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = -1.09673e-05
margin_top = -2.0
margin_right = 518.0
margin_bottom = 24.0
grow_vertical = 2
size_flags_vertical = 3
texture = SubResource( 7 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/FlyProgress"]
anims/slide = SubResource( 8 )

[node name="ShipGui" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 0.827
anchor_right = 1.0
anchor_bottom = 0.212
margin_left = -235.923
margin_top = -57.289
margin_right = -209.363
margin_bottom = -111.929
rect_scale = Vector2( 1.4, 1.4 )
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 60
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
ship = NodePath("../../Ship")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ShipGui"]
margin_top = 60.0
margin_right = 148.0
margin_bottom = 98.0
texture = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ShipGui"]
margin_top = 60.0
margin_right = 148.0
margin_bottom = 98.0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ShipGui/VBoxContainer"]
margin_top = 29.0
margin_right = 148.0
margin_bottom = 38.0
custom_constants/margin_right = 39
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ShipGui/VBoxContainer/MarginContainer"]
margin_right = 109.0
margin_bottom = 7.0
custom_constants/separation = 1
alignment = 2

[node name="HpUnit" type="TextureRect" parent="CanvasLayer/ShipGui/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 109.0
margin_bottom = 7.0
texture = ExtResource( 6 )

[node name="EndScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/EndScreen"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EndScreen/CenterContainer"]
margin_left = 586.0
margin_top = 316.0
margin_right = 693.0
margin_bottom = 403.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/EndScreen/CenterContainer/VBoxContainer"]
margin_right = 107.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.486275, 0.247059, 0.345098, 1 )
align = 1

[node name="Button" type="Button" parent="CanvasLayer/EndScreen/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 63.0
margin_right = 107.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.407843, 0.286275, 0.443137, 1 )
custom_colors/font_color_hover = Color( 0.796078, 0.486275, 0.635294, 1 )
custom_colors/font_color_pressed = Color( 0.796078, 0.486275, 0.635294, 1 )
shortcut = SubResource( 14 )
text = "Main Menu"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/EndScreen"]
pause_mode = 2
anims/show = SubResource( 15 )
[connection signal="timeout" from="SpawnCtrl/Timer" to="SpawnCtrl" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="CanvasLayer/FlyProgress/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CanvasLayer/EndScreen/CenterContainer/VBoxContainer/Button" to="CanvasLayer/EndScreen" method="_on_Button_pressed"]
